templates/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
    name: busybox
    namespace: default
spec:
    serviceAccountName: jenkins
    containers:
    - image: busybox:1.28.4
      command:
          - sleep
          - "3600"
      imagePullPolicy: IfNotPresent
      name: busybox
    restartPolicy: OnFailure
